# cpkg

./: .gitignore  CHANGES.md  CMakeLists.txt  CNAME  README.md  index.html  main.cpp  ninja_syntax.py
docs/: index.html
download/: release-0.0.1.0  release-0.0.1.1  release-0.0.1.2  sha256sums.txt
lua-5.4.7/: CMakeLists.txt
src/: main.cpp  ninja_generator.cpp  ninja_generator.hpp  ninja_syntax.cpp  ninja_syntax.hpp  utils.cpp  utils.hpp
test/: cpkg  cpkg.lua  test.lua
test/lib/include/: lib.h
test/lib/src/: lib.c
test/src/: test.cpp
